Use more Java11 syntax for creating and clean up mock creations